# oip

./: .cproject  .gitignore  .project  .travis.yml  COPYING  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.orig  NEWS  NotesModif.md  README.md  aclocal.m4  capreader.cpp  capreader.h  chart.cpp  chart.h  clientmanager.cpp  clientmanager.h  clientpm.cpp  clientpm.h  config.cpp  config.h  config.h.in  configure  configure.ac  encrypt.cpp  encrypt.h  entity.cpp  entity.h  entityset.cpp  entityset.h  entitytest.cpp  font.cpp  gimpdots.py  hexprint.cpp  hexprint.h  idea.txt  image.cpp  (+36 more)
deb/: changelog  control  copyright  files  oip.docs  oip.install  oipd.install  organicips-client.install  rules
gui/: Makefile  base.h  button.cpp  button.h  draw.h  font.cpp  font.h  guitest.cpp  label.cpp  label.h  layout.cpp  layout.h  option.cpp  option.h  textbox.cpp  textbox.h  widget.cpp  widget.h
vc6/: organicips.dsp  organicips.dsw
